[metadata]
name = gmpyinfr_dbutils
description = Infraestrutura dbutils python da equipe de Ciencia de Dados do Grupo Mateus
long_description = file: README.md
long_description_content_type = text/markdown
author = Time de Ciencia de Dados do Grupo Mateus
author_email = alex.newman@grupomateus.com.br
version = 0.0.1
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Operating System :: Unix

[options]
packages = find:
install_requires =
	turbodbc==4.1.2
	pyarrow>=3.0.0
	pandas>=1.0.0
python_requires = >=3.7.1, <3.8.*
include_package_data = True
zip_safe = False
